--- a/VierOpEenRij.v2.html
+++ b/VierOpEenRij.v2.html
@@ -124,6 +124,8 @@
     <br />
     <button id="knopOpnieuw" onclick="opnieuw()">Nieuw spel</button>
     <div id="hallo"><p>Clicks: <a id="clicks">0</a></p></div>
+    <p>Style je steen!</p>
+    <img src="thumbnails\giraf.jpg">
     <details>
         <summary>Copyright 2019.</summary>
         <p>This game is created by YoungCapital NEXT. All Rights Reserved.</p>
